# spotterjs

./: .gitee-ci.yml  .gitignore  .npmrc  CONTRIBUTING.md  Cargo.toml  LICENSE.zh-CN  README.md  README.zh-CN.md  package-lock.json  package.json
.cargo/: config.toml
.changeset/: README.md  android-device-identity.md  android-mcp-package-docs.md  clear-api-exports.md  config.json  mcp-android-tools.md  native-api-consolidation.md  native-loader-diagnostics.md  plugins-and-types-release.md  quiet-android-tools.md  remove-opencv-ncc-v2.md
apps/mobile-companion/: README.md  pubspec.yaml
apps/mobile-companion/android/: build.gradle.kts  settings.gradle.kts
apps/mobile-companion/android/app/: build.gradle.kts  proguard-rules.pro
apps/mobile-companion/lib/: main.dart
apps/mobile-companion/test/: widget_test.dart
assets/ncc-fixtures/: README.md
assets/wechat/templates/: README.md
config/: wechat.automation.example.json
crates/spotter-base/: Cargo.toml
crates/spotter-base/src/: error.rs  types.rs
crates/spotter-base/src/napi/: convert.rs  types.rs
crates/spotter-base/src/plugin/: match.rs  ocr.rs
crates/spotter-core/: Cargo.toml
crates/spotter-core/src/: desktop.rs  error.rs  image.rs  input.rs  keyboard.rs  lib.rs  matcher.rs  needle_cache.rs  screen.rs  types.rs  window.rs
crates/spotter-core/src/accessibility/: linux.rs  mod.rs  state.rs  types.rs  windows.rs
crates/spotter-core/src/platform/: bgra.rs  linux_x11.rs  mod.rs  windows.rs
crates/spotter-core/tests/: api_smoke.rs  platform_integration.rs
crates/spotter-node/: Cargo.toml  LICENSE  README.md  package.json
crates/spotter-node-match-opencv/: Cargo.toml  README.md  package.json
crates/spotter-node-match-opencv/src/: lib.rs
crates/spotter-node/src/: lib.rs
crates/spotter-plugin-match-ncc/: Cargo.toml
crates/spotter-plugin-match-ncc/examples/: bench_ncc.rs
crates/spotter-plugin-match-ncc/src/: gray.rs  integral.rs  lib.rs  multiscale.rs  ncc.rs  parallel.rs  pyramid.rs  simd.rs  util.rs
crates/spotter-plugin-match-ncc/tests/: ncc_synthetic_scenarios.rs
crates/spotter-plugin-match-ncc/tests/common/: fixtures.rs
crates/spotter-plugin-match-opencv/: Cargo.toml
crates/spotter-plugin-match-opencv/src/: lib.rs
crates/spotterjs-base/: Cargo.toml
crates/spotterjs-base/src/: error.rs  lib.rs  types.rs
crates/spotterjs-base/src/napi/: convert.rs  mod.rs  types.rs
crates/spotterjs-base/src/plugin/: match.rs  mod.rs  ocr.rs
crates/spotterjs-core/: Cargo.toml
crates/spotterjs-core/src/: capture.rs  clipboard.rs  color.rs  desktop.rs  diff.rs  error.rs  image.rs  input.rs  keyboard.rs  lib.rs  matcher.rs  needle_cache.rs  types.rs
crates/spotterjs-core/src/accessibility/: linux.rs  mod.rs  state.rs  types.rs  uia_handler.rs  windows.rs
crates/spotterjs-core/src/events/: guard.rs  hotkey.rs  listener.rs  mod.rs  player.rs  recorder.rs
crates/spotterjs-core/src/platform/: bgra.rs  mod.rs  (+4 more)
crates/spotterjs-core/tests/: api_smoke.rs  events_unit.rs  platform_integration.rs
crates/spotterjs-node/: CHANGELOG.md  Cargo.toml  README.md  package.json
crates/spotterjs-node/linux-x64-gnu/: README.md  package.json
crates/spotterjs-node/src/: lib.rs
crates/spotterjs-node/win32-x64-msvc/: LICENSE  README.md  package.json
crates/spotterjs-plugin-match-feature/: Cargo.toml
crates/spotterjs-plugin-match-feature/src/: akaze_backend.rs  gray.rs  lib.rs
crates/spotterjs-plugin-match-feature/tests/: feature_synthetic.rs
crates/spotterjs-plugin-match-ncc/: Cargo.toml
crates/spotterjs-plugin-match-ncc/examples/: bench_ncc.rs
crates/spotterjs-plugin-match-ncc/src/: gray.rs  integral.rs  lib.rs  multiscale.rs  ncc.rs  parallel.rs  pyramid.rs  util.rs
crates/spotterjs-plugin-match-ncc/tests/: ncc_synthetic_scenarios.rs
crates/spotterjs-plugin-match-ncc/tests/common/: fixtures.rs
docs/: CLEANUP-AND-ARCHITECTURE.md  MATCHING.md  MCP.md  PUBLISHING.md  README.md  examples.md  getting-started.md  troubleshooting.md  user-manual.md
docs/development/: architecture.md  documentation-style.md  testing.md
docs/en/: CLEANUP-AND-ARCHITECTURE.md  MATCHING.md  MCP.md  PUBLISHING.md  README.md  examples.md  getting-started.md  troubleshooting.md
docs/en/development/: architecture.md  documentation-style.md  testing.md
docs/en/guides/: accessibility.md  android-adb.md  android-companion.md  desktop-automation.md  ocr.md
docs/guides/: accessibility.md  android-adb.md  android-companion.md  desktop-automation.md  ocr.md
docs/plans/: 2026-05-21-learned-template-matching-analysis.md  2026-05-21-ncc-performance-and-image-io.md
docs/zh-CN/: CLEANUP-AND-ARCHITECTURE.md  MATCHING.md  MCP.md  PUBLISHING.md  README.md  examples.md  getting-started.md  troubleshooting.md
docs/zh-CN/development/: architecture.md  documentation-style.md  testing.md
docs/zh-CN/guides/: accessibility.md  android-adb.md  android-companion.md  desktop-automation.md  mobile-companion.md  ocr.md
examples/: README.md
examples/paint/: 01-open-focus.ts  02-capture-window.ts  03-match-tool.ts  04-click-tool.ts  05-keyboard-mouse.ts  06-ui-tree-dump.ts  07-ui-tree-query.ts  run-all.ts
examples/paint/lib/: paint.ts  ui-tree.ts
scripts/: README.md  check-doc-links.mjs  prepare-native-package.mjs  prepare-native-packages.mjs  prepare-ocr-models.mjs  setup-mobile-companion.ps1  sync-license.mjs  sync-native-package-versions.mjs  verify-local-native-install.mjs  verify-native-registry.mjs  verify-pack.mjs
scripts/benchmark/: ncc-multiscale.ts  run.ts
scripts/integration/: 06-uia-dump-wechat.ts  wechat-match.ts  wechat-probe-match.ts  wechat-send.ts
scripts/integration/lib/: wechat-contact.ts
scripts/lib/: loadAutomationConfig.ts  log.ts  png.ts
scripts/smoke/: 01-version-screen.ts  02-capture.ts  03-clipboard.ts  04-windows.ts  05-match-self.ts  06-accessibility-gtk.ts  06-accessibility-notepad.ts  07-desktop-apps.ts  08-match-tap-coords.ts  android-adb.ts  android-companion.ts  android-wireless.ts  fill-text-e2e.mjs  ncc-synthetic-scenarios.ts  ocr-synthetic.ts  run-all.ts  run-noninteractive.ts
(+16 files in other folders)
