[workspace]
resolver = "2"
members = [
    "crates/spotter-base",
    "crates/spotter-core",
    "crates/spotter-plugin-match-ncc",
    "crates/spotter-node",
]
default-members = [
    "crates/spotter-base",
    "crates/spotter-core",
    "crates/spotter-plugin-match-ncc",
    "crates/spotter-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Spotter-1.0"
authors = ["Spotter Contributors"]
repository = "https://gitee.com/ypl0lpy/spotter"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
enigo = "0.6"
arboard = "3.4"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Storage_Xps",
] }
atspi = { version = "0.22", default-features = false, features = ["tokio"] }
atspi-common = "0.6"
zbus = { version = "4", default-features = false, features = ["tokio"] }
base64 = "0.22"
napi = "2"
napi-derive = "2"
napi-build = "2"
