[workspace]
resolver = "2"
members = [
    "crates/spotterjs-base",
    "crates/spotterjs-core",
    "crates/spotterjs-plugin-match-ncc",
    "crates/spotterjs-node",
]
default-members = [
    "crates/spotterjs-base",
    "crates/spotterjs-core",
    "crates/spotterjs-plugin-match-ncc",
    "crates/spotterjs-node",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "LicenseRef-spotterjs-1.0"
authors = ["spotterjs Contributors"]
repository = "https://github.com/yinpeilin/spotterjs"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
enigo = "0.6"
arboard = "3.4"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Storage_Xps",
] }
atspi = { version = "0.22", default-features = false, features = ["tokio"] }
atspi-common = "0.6"
zbus = { version = "4", default-features = false, features = ["tokio"] }
base64 = "0.22"
napi = "2"
napi-derive = "2"
napi-build = "2"
