[package]
name = "spotter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform desktop automation core (Windows + Linux X11)"

[features]
default = ["accessibility"]
accessibility = []
accessibility-windows = ["accessibility"]
accessibility-linux = ["accessibility", "linux-x11", "dep:atspi", "dep:atspi-common", "dep:zbus", "dep:tokio"]
linux-x11 = ["dep:x11rb"]

[dependencies]
spotter-base = { path = "../spotter-base" }
spotter-plugin-match-ncc = { path = "../spotter-plugin-match-ncc" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
image.workspace = true
enigo.workspace = true
arboard.workspace = true
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { version = "0.61.2", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true, features = ["xtest", "allow-unsafe-code"] }
atspi = { workspace = true, optional = true }
atspi-common = { workspace = true, optional = true }
zbus = { workspace = true, optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
