[package]
name = "spotter-node-match-opencv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenCV template matching N-API bindings for Spotter"

[lib]
crate-type = ["cdylib"]

[dependencies]
spotter-base = { path = "../spotter-base", features = ["napi"] }
spotter-plugin-match-opencv = { path = "../spotter-plugin-match-opencv" }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }
image.workspace = true

[build-dependencies]
napi-build = { workspace = true }
