[package]
name = "spotter-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for Spotter via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
spotter-base = { path = "../spotter-base", features = ["napi"] }
spotter-core = { path = "../spotter-core" }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[features]
default = []
linux-x11 = ["spotter-core/linux-x11"]

[build-dependencies]
napi-build = { workspace = true }
