[package]
name = "spotter-plugin-match-ncc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NCC template matching plugin for Spotter"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
spotter-base = { path = "../spotter-base" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
spotter-core = { path = "../spotter-core" }
