[package]
name = "spotterjs-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for spotterjs via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
spotterjs-base = { path = "../spotterjs-base", features = ["napi"] }
spotterjs-core = { path = "../spotterjs-core" }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }
base64 = { workspace = true }

[features]
default = []
linux-x11 = ["spotterjs-core/linux-x11"]

[build-dependencies]
napi-build = { workspace = true }
